--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Parcial.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc8.jar=C:\\app\\PANCHY\\product\\18.0.0\\dbhomeXE\\jdbc\\lib\\ojdbc8.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
