--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\PANCHY\\AppData\\Roaming\\NetBeans\\8.1rc\\build.properties
+file.reference.ojdbc8.jar=C:\\Users\\Amilcar\\Downloads\\lib\\ojdbc8.jar
+user.properties.file=C:\\Users\\Amilcar\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
